# Scholar-Compass-backend

./: .gitignore  README.md  api.py  curl.txt  embedding.py  md_to_csv.py  pyproject.toml  read_csv.py  requirements.txt  search.py  todo.txt
csv/: 上海交通大学.csv  上海财经大学.csv  中国传媒大学.csv  中国科学院大学.csv  中央财经大学.csv  北京外国语大学.csv  北京大学.csv  北京大学医学部.csv  北京师范大学.csv  北京林业大学.csv  北京理工大学.csv  北京科技大学.csv  北京邮电大学.csv  华东师范大学.csv  南京大学.csv  南开大学.csv  吉林大学.csv  同济大学.csv  哈尔滨工业大学.csv  四川大学.csv  外交学院.csv  大连理工大学.csv  浙江大学.csv  澳门大学.csv  西交利物浦大学.csv  西南政法大学.csv  重庆大学.csv  首都医科大学.csv  香港大学.csv  香港科技大学.csv
csv_other/: links.csv
csv_to_embed/: 上海交通大学.csv  上海财经大学.csv  中国传媒大学.csv  中国政法大学.csv  中国科学院大学.csv  中央财经大学.csv  北京外国语大学.csv  北京大学.csv  北京大学医学部.csv  北京师范大学.csv  北京林业大学.csv  北京理工大学.csv  北京科技大学.csv  北京航空航天大学.csv  北京邮电大学.csv  华东师范大学.csv  南京大学.csv  南开大学.csv  吉林大学.csv  同济大学.csv  哈尔滨工业大学.csv  四川大学.csv  外交学院.csv  大连理工大学.csv  天津大学.csv  对外经贸大学.csv  常见问题汇总.csv  武汉大学.csv  浙江大学.csv  清华大学.csv  澳门大学.csv  西交利物浦大学.csv  西南政法大学.csv  重庆大学.csv  首都医科大学.csv  首都经贸大学.csv  香港大学.csv  香港科技大学.csv
embedding/: 上海交通大学.csv  上海财经大学.csv  中国传媒大学.csv  中国政法大学.csv  中国科学院大学.csv  中央财经大学.csv  北京外国语大学.csv  北京大学.csv  北京大学医学部.csv  北京师范大学.csv  北京林业大学.csv  北京理工大学.csv  北京科技大学.csv  北京航空航天大学.csv  北京邮电大学.csv  华东师范大学.csv  南京大学.csv  南开大学.csv  吉林大学.csv  同济大学.csv  哈尔滨工业大学.csv  四川大学.csv  外交学院.csv  大连理工大学.csv  天津大学.csv  对外经贸大学.csv  常见问题汇总.csv  武汉大学.csv  浙江大学.csv  清华大学.csv  澳门大学.csv  西交利物浦大学.csv  西南政法大学.csv  重庆大学.csv  首都医科大学.csv  首都经贸大学.csv  香港大学.csv  香港科技大学.csv
md/: 上海交通大学.md  上海财经大学.md  中国传媒大学.md  中国科学院大学.md  中央财经大学.md  北京外国语大学.md  北京大学.md  (+23 more)
(+38 files in other folders)
