[tool.poetry]
name = "scholar-compass-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.10.0"
pandas = "^2.2.0"
tiktoken = "^0.5.2"
scipy = "^1.12.0"
python-dotenv = "^1.0.1"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
